# transparent-overlay

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
installer/: installer.nsi
src/: app.rs  config.html  config.rs  launch.js  main.rs  socket.rs  tray.rs  ui.rs  video.rs
src-tauri/: Cargo.toml
src-tauri/src/: config.rs  config_window.rs  livechat.rs  main.rs  monitors_utils.rs  tray.rs  warning.rs
